Code cleanup
- Separate code responsibilities in their respective services.
- Move distance calculation in a utility class.
- Add thread pool size property.
- Improve test mode initialization.